tests/ui/typeck/tail-return-type-mismatch.stderr
error[E0308]: mismatched types
  --> $DIR/tail-return-type-mismatch.rs:4:12
   |
LL | fn f() -> isize {
   |           ----- expected `isize` because of return type
LL |     return g();
   |            ^^^ expected `isize`, found `usize`
   |
help: you can convert a `usize` to an `isize` and panic if the converted value doesn't fit
   |
LL |     return g().try_into().unwrap();
   |               ++++++++++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
